[project]
name = "dagpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "ollama>=0.3.3",
    "pydantic>=2.9.2",
    "pypdf>=5.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
]
